# roslike

./: CMakeLists.txt  LICENSE  README.md  datatype.h  main.cpp  rclcpp.cpp  rclcpp.h  serializer.h  shared_mem.cpp  shared_mem.h
rclcpp/: CMakeLists.txt  datatype.h  main.cpp  rclcpp.h  serializer.h
rclcpp/test/: serializer.cpp
rclpy/: __init__.py  datatype.py  node.py  rclpy.py  serializer.py  test.py
